2002-01-16  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am: defined GEDIT_LOCALEDIR

	[Added a +<lnum> option (like vi)] Thanks to James Willcox 
	for his work on it

	[Started implemetation of plugin support]

	* gedit-plugin.h: new file

	* gedit-plugins-engine.[ch]: ditto

	[Fixed some bug with notebook labels in bonobo-mdi]
	
2002-01-15  Paolo Maggi  <maggi@athena.polito.it>
	
	* gedit-utils.h (gedit_text_iter_forward_search): new prototype

	* gedit-utils.c (gedit_text_iter_forward_search): new experimental
	function to perform case insensitive search (beside normal case
	sensitive search)
	(g_utf8_strcasestr): new private function
	(g_uft8_caselessnmatch): ditto
	(forward_chars_with_skipping): ditto
	(lines_match): ditto
	(strbreakup): ditto

	* gedit-document.c (gedit_document_find): enabled support for
	case insensitive search. Use the new gedit_text_iter_forward_search

	* dialogs/gedit-dialog-replace.c: enabled support for case insensitive
	search

2002-01-14  James Willcox <jwillcox@cs.indiana.edu>

	* dialogs/gedit-dialog-replace.c:  Made one small change
	in the wording of the search error message.  (The consensus is
	that the word "string" shouldn't appear in an error message).

	* dialogs/gedit-preferences.glade2:  More string fixes.

2002-01-14  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_load): add some debug
	message

	* gnome-vfs-helpers.c (gnome_vfs_x_read_entire_file): hack to
	fix a bug when loading ftp files

	* gedit-ui.xml: hide debug menu 
	
2002-01-13  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-prefs.c: save and load window size
	(gedit_prefs_configure_event_handler): new function
	
	* gedit-pref.h (gedit_prefs_configure_event_handler): 
	new prototype

	* gedit-mdi.c (gedit_mdi_app_created_handler): connect the
	"configure_event" signal of the created window to 
	gedit_prefs_configure_event_handler to track window size
  
2002-01-12  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-prefs.[ch]: