@@ -1,3 +1,7 @@
+2002-01-17  Paolo Maggi  <maggi@athena.polito.it>
+
+	* sample/sample.c: now it works (a bit)
+
 2002-01-16  Paolo Maggi  <maggi@athena.polito.it>
 
 	* Makefile.am: rewritten
