@@ -1,3 +1,13 @@
+2002-01-17  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-document.[ch] (gedit_document_insert_text_at_cursor):
+	new function
+
+	* gedit2.[ch] (gedit_get_top_windows): new function
+	(gedit_get_ui_component_from_window): ditto
+
+	* gedit-ui.xml: added a lot of new placeholders
+
 2002-01-16  Paolo Maggi  <maggi@athena.polito.it>
 
 	* Makefile.am: defined GEDIT_LOCALEDIR
